# wzrd

./: .gitignore  Cargo.toml  LICENSE  Makefile  launch  rustfmt.toml  xinitrc
git-hooks/: pre-commit
src/core/: binding.rs  change.rs  client.rs  common.rs  compare.rs  consume.rs  cycle.rs  decoration.rs  defaults.rs  error.rs  identify.rs  jump.rs  layout.rs  macros.rs  main.rs  model.rs  partition.rs  placement.rs  rule.rs  stack.rs  util.rs  workspace.rs  zone.rs
src/winsys/: common.rs  connection.rs  event.rs  geometry.rs  hints.rs  input.rs  macros.rs  mod.rs  screen.rs  window.rs
src/winsys/xdata/: event.rs  input.rs  mod.rs  util.rs  xconnection.rs
